fix backdrop z-index

--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@ img {
   left: 0;
   width: 100%;
   height: 100%;
+  z-index: 10;
 }
 
 header {
@@ -125,11 +126,13 @@ header {
     @media (max-width: 65.25rem) {
       position: fixed;
       background-color: #694943;
-      padding: 16px;
+      padding: 32px 16px;
       display: flex;
+      border-top-right-radius: 5px;
+      border-bottom-right-radius: 5px;
       flex-direction: column;
       width: 280px;
-      z-index: 10;
+      z-index: 20;
       top: 0;
       left: -120%;
       transition: 0.5s;
@@ -137,11 +140,18 @@ header {
 
     li {
       text-align: center;
+      transition: 0.2s;
       &:last-child {
         margin-left: 4rem;
         @media (max-width: 74.25rem) {
           margin-left: unset;
         }
+      }
+
+      &:hover {
+        transform: scale(1.2);
+        padding: 0 8px;
+        border-bottom: 2px solid #eedcc5;
       }
     }
 
